--- a/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
@@ -96,6 +96,7 @@
                     /**/
                     /**/
                     /**/
+                    /**/
                 </InputSelect>
             </div>
 
@@ -138,12 +139,11 @@
                         <td>@item.SubTotal</td>
                         <td><button class="btn btn-outline-danger" @onclick="(() => EliminarDetalle(item))" type="button">Remover</button></td>
                     </tr>
-                }
+                 }
 
+            </tbody>
 
-
-
-         
+        </table>
 
         <div class="form-group">
             <label for="Total">Total</label>
