--- a/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
@@ -83,6 +83,18 @@
             <ValidationMessage For="(() => compras.DescripcionCompra)"></ValidationMessage>
         </div>
 
+        <div class="form-group">
+            <label for="Proveerdor">Proveerdor</label>
+            <InputSelect class="form-control" @bind-Value="compras.NombreProveedor">
+                <option value="">Seleccione un Proveedor</option>
+                @foreach (var item in ProveedorLista)
+                 {
+                    <option value="@item.NombreProveedor">@item.NombreProveedor</option>
+                 }
+            </InputSelect>
+            <ValidationMessage For="(() => compras.NombreProveedor)"></ValidationMessage>
+        </div>
+
         <div class="row">
             <div class="col">
                 <label for="Producto">Producto</label>
@@ -92,6 +104,8 @@
                         {
                         <option value="@item.ProductoId">@item.Nombre</option>
                         }
+                    /**/
+                    /**/
                     /**/
                     /**/
                     /**/
@@ -139,7 +153,7 @@
                         <td>@item.SubTotal</td>
                         <td><button class="btn btn-outline-danger" @onclick="(() => EliminarDetalle(item))" type="button">Remover</button></td>
                     </tr>
-                 }
+                }
 
             </tbody>
 
@@ -218,7 +232,7 @@
         }
 
         Proveedores proveedores = new Proveedores();
-        if (proveedorescontrollers.Existe(compras.NombreProveedor))
+        if (!proveedorescontrollers.Existe(compras.NombreProveedor))
         {
             toastService.ShowWarning("Parece que el proovedor no existe", "No existe proovedor");
         }
