--- a/ProyectoFinal-Aplicada2/Menu/MenuRegistros.razor
+++ b/ProyectoFinal-Aplicada2/Menu/MenuRegistros.razor
@@ -2,7 +2,7 @@
 
 <h3>Menú de Registros</h3>
 
-<div class="row">
+@*<div class="row">
     <div class="col-sm-6">
         <div class="card">
             <div class="card-body">
@@ -61,6 +61,17 @@
                 <p class="card-text">Registro para agregar, modificar y eliminar Ventas.</p>
                 <a href="Ventas/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
             </div>
+        </div>
+    </div>
+</div>*@
+
+<div class="row">
+    <div class="card" style="width: 18rem;">
+        <img src="Imagenes/ProductosHerbicidas.jpg"asp-append-version="true" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Registro de productos</h5>
+            <p class="card-text">Registro para agregar, modificar y eliminar Productos.</p>
+            <a href="Productos/0" class="btn btn-primary">Entrar</a>
         </div>
     </div>
 </div>
