--- a/ProyectoFinal-Aplicada2/Menu/MenuRegistros.razor
+++ b/ProyectoFinal-Aplicada2/Menu/MenuRegistros.razor
@@ -3,64 +3,57 @@
 <h3>Menú de Registros</h3>
 
 <div class="row">
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Registro de Usuarios</h5>
-                <p class="card-text">Registro para agregar, modificar y eliminar Usuarios.</p>
-                <a href="Usuarios/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
-            </div>
+    <div class="card" style="width: 18rem;">
+        <img src="/Iconos/Usuarios_Icon.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Registro de Usuarios</h5>
+            <p class="card-text">Registro para agregar, modificar y eliminar Usuarios.</p>
+            <a href="Usuarios/0" class="btn btn-primary">Ir a Registro de Usuarios</a>
         </div>
     </div>
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Registro de Productos</h5>
-                <p class="card-text">Registro para agregar, modificar y eliminar Productos.</p>
-                <a href="Productos/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
-            </div>
+
+    <div class="card" style="width: 18rem;">
+        <img src="/Iconos/Productos2_Icon.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Registro de Productos</h5>
+            <p class="card-text">Registro para agregar, modificar y eliminar Productos.</p>
+            <a href="Productos/0" class="btn btn-primary">Ir a Registro de Productos</a>
         </div>
     </div>
-</div>
-<br />
-<div class="row">
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Registro de Proveedores</h5>
-                <p class="card-text">Registro para agregar, modificar y eliminar Proveedores.</p>
-                <a href="Proveedores/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
-            </div>
+
+    <div class="card" style="width: 18rem;">
+        <img src="/Iconos/Proveedores_Icon.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Registro de Proveedores</h5>
+            <p class="card-text">Registro para agregar, modificar y eliminar Proveedores.</p>
+            <a href="Proveedores/0" class="btn btn-primary">Ir a Registro de Proveedores</a>
         </div>
     </div>
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Registro de Compras</h5>
-                <p class="card-text">Registro para agregar, modificar y eliminar Compras.</p>
-                <a href="Compras/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
-            </div>
+
+    <div class="card" style="width: 18rem;">
+        <img src="/Iconos/Compras_Icon.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Registro de Compras</h5>
+            <p class="card-text">Registro para agregar, modificar y eliminar Compras.</p>
+            <a href="Compras/0" class="btn btn-primary">Ir a Registro de Compras</a>
         </div>
     </div>
-</div>
-<br />
-<div class="row">
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Registro de Pagos</h5>
-                <p class="card-text">Registro para agregar, modificar y eliminar Pagos.</p>
-                <a href="Pagos/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
-            </div>
+
+    <div class="card" style="width: 18rem;">
+        <img src="/Iconos/Pagos_Icon.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Registro de Pagos</h5>
+            <p class="card-text">Registro para agregar, modificar y eliminar Pagos.</p>
+            <a href="Pagos/0" class="btn btn-primary">Ir a Registro de Pagos</a>
         </div>
     </div>
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Registro de Ventas</h5>
-                <p class="card-text">Registro para agregar, modificar y eliminar Ventas.</p>
-                <a href="Ventas/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
-            </div>
+
+    <div class="card" style="width: 18rem;">
+        <img src="/Iconos/Ventas2_Icon.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Registro de Ventas</h5>
+            <p class="card-text">Registro para agregar, modificar y eliminar Ventas.</p>
+            <a href="Ventas/0" class="btn btn-primary">Ir a Registro de Ventas</a>
         </div>
     </div>
 </div>
