Imagenes de las consultas agregadas

--- a/ProyectoFinal-Aplicada2/Menu/MenuConsultas.razor
+++ b/ProyectoFinal-Aplicada2/Menu/MenuConsultas.razor
@@ -1,70 +1,80 @@
 ﻿@page "/MenuConsultas"
 <h3>Menú de Consultas</h3>
+
 <div class="row">
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Consulta de Usuarios</h5>
-                <p class="card-text">Consulta para acceder a los Usuarios creados.</p>
-                <a href="ConsultaUsuarios" class="btn btn-primary btn-lg btn-block">Entrar</a>
-            </div>
+    <div class="card" style="width: 18rem;">
+        <img src="/Iconos/UsuariosC_Icon.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Consulta de Usuarios</h5>
+            <p class="card-text">Consulta para acceder a los Usuarios creados.</p>
+            <a href="ConsultaUsuarios" class="btn btn-primary">Ir a Consulta de Usuarios</a>
         </div>
     </div>
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Consulta de Productos</h5>
-                <p class="card-text">Consulta para acceder a los Productos creados.</p>
-                <a href="ConsultaProductos" class="btn btn-primary btn-lg btn-block">Entrar</a>
-            </div>
+    <div class="card" style="width: 18rem;">
+        <img src="/Iconos/CategoriasC_Icon.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Consulta de Categorias</h5>
+            <p class="card-text">Consulta para acceder a las Categorias de productos creadas.</p>
+            <a href="" class="btn btn-primary">Ir a Consulta de Productos</a>
+        </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+        <img src="/Iconos/ProductosC_Icon.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Consulta de Productos</h5>
+            <p class="card-text">Consulta para acceder a los Productos creados.</p>
+            <a href="ConsultaProductos" class="btn btn-primary">Ir a Consulta de Productos</a>
+        </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+        <img src="/Iconos/ProveedoresC_Icon.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Consulta de Proveedores</h5>
+            <p class="card-text">Consulta para acceder a los Proveedores creados.</p>
+            <a href="ConsultaProveedores" class="btn btn-primary">Ir a Consulta de Proveedores</a>
+        </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+        <img src="/Iconos/Usuarios2C_Icon.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Consulta de Compras</h5>
+            <p class="card-text">Consulta para acceder a las Compras creadas.</p>
+            <a href="ConsultaCompras" class="btn btn-primary">Ir a Consulta de Compras</a>
+        </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+        <img src="/Iconos/PagosC_Icon.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Consulta de Pagos</h5>
+            <p class="card-text">Consulta para acceder a los Pagos creados.</p>
+            <a href="ConsultaPagos" class="btn btn-primary">Ir a Consulta de Pagos</a>
+        </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+        <img src="/Iconos/ClientesC_Icon.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Consulta de Clienets</h5>
+            <p class="card-text">Consulta para acceder a los Clientes creados.</p>
+            <a href="" class="btn btn-primary">Ir a Consulta de Clientes</a>
+        </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+        <img src="/Iconos/VentasC_Icon.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Consulta de Ventas</h5>
+            <p class="card-text">Consulta para acceder a las Ventas creadas.</p>
+            <a href="ConsultaVentas" class="btn btn-primary">Ir a Consulta de Ventas</a>
         </div>
     </div>
 </div>
 <br />
-<div class="row">
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Consulta de Proveedores</h5>
-                <p class="card-text">Consulta para acceder a los Proveedores creados.</p>
-                <a href="ConsultaProveedores" class="btn btn-primary btn-lg btn-block">Entrar</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Consulta de Compras</h5>
-                <p class="card-text">Consulta para acceder a las Compras creadas.</p>
-                <a href="ConsultaCompras" class="btn btn-primary btn-lg btn-block">Entrar</a>
-            </div>
-        </div>
-    </div>
-</div>
 <br />
-<div class="row">
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Consulta de Pagos</h5>
-                <p class="card-text">Consulta para acceder a los Pagos creados.</p>
-                <a href="ConsultaPagos" class="btn btn-primary btn-lg btn-block">Entrar</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-sm-6">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Consulta de Ventas</h5>
-                <p class="card-text">Consulta para acceder a las Ventas creadas.</p>
-                <a href="ConsultaVentas" class="btn btn-primary btn-lg btn-block">Entrar</a>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-
 
 @code {
 
