--- a/ProyectoFinal-Aplicada2/Menu/MenuRegistros.razor
+++ b/ProyectoFinal-Aplicada2/Menu/MenuRegistros.razor
@@ -11,9 +11,17 @@
             <a href="Usuarios/0" class="btn btn-primary">Ir a Registro de Usuarios</a>
         </div>
     </div>
+    <div class="card" style="width: 18rem;">
+        <img src="/Iconos/Boxes-Self_35539.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Registro de Categorias</h5>
+            <p class="card-text">Registro para agregar, modificar y eliminar Categorias de Productos.</p>
+            <a href="" class="btn btn-primary">Ir a Registro de Productos</a>
+        </div>
+    </div>
 
     <div class="card" style="width: 18rem;">
-        <img src="/Iconos/Productos2_Icon.png" class="card-img-top" alt="...">
+        <img src="/Iconos/Green-Boxes_35603.png" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Registro de Productos</h5>
             <p class="card-text">Registro para agregar, modificar y eliminar Productos.</p>
@@ -49,6 +57,15 @@
     </div>
 
     <div class="card" style="width: 18rem;">
+        <img src="/Iconos/supervisor_people_man_you_2840.png" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Registro de Clienets</h5>
+            <p class="card-text">Registro para agregar, modificar y eliminar Clientes.</p>
+            <a href="" class="btn btn-primary">Ir a Registro de Clientes</a>
+        </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
         <img src="/Iconos/Ventas2_Icon.png" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Registro de Ventas</h5>
@@ -57,7 +74,8 @@
         </div>
     </div>
 </div>
-
+<br />
+<br />
 
 @code {
 
